syntax = "proto3";
package nova.ibcstaking.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "nova/ibcstaking/v1/params.proto";

option go_package = "github.com/Carina-labs/nova/x/ibcstaking/types";

message GenesisState {
  // params defines all the parameters of module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message RegisteredZone {
  string zone_id = 1;
  IcaConnectionInfo ica_connection_info = 2;
  IcaAccount ica_account = 3;
  string validator_address = 4;
  string base_denom = 5;
  string sn_denom = 6;
  int64 decimal = 7;
}

message IcaAccount {
  string daomodifier_address = 1;
  string host_address = 2;
  cosmos.base.v1beta1.Coin balance = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

//zone name, connection id, portID(owner address)
message IcaConnectionInfo {
  string connection_id = 1;
  string port_id = 2;
}